# ProbeStream

./: .gitignore  README.md
.github/workflows/: ci.yml  release.yml
docs/: API.md  TUI-QuickStart.md  wire-protocol.md
host/: ProbeStreamProtocol.h  ProbeStreamReader.cpp  ProbeStreamReader.h
tests/: .env.example  load_env.py  stream_test.py  test_reader  test_reader.cpp
tests/smoke_nucleo_g474/: CMakeLists.txt  benchmark_g4.py  stream_test.py
tests/smoke_nucleo_g474/Core/Src/: main.c  main_stress.c  stm32g4xx_it.c
tests/smoke_nucleo_g474/build_stress/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tests/smoke_nucleo_g474/build_stress/cmake/stm32cubemx/: cmake_install.cmake
tests/smoke_nucleo_g474/cmake/stm32cubemx/: CMakeLists.txt
tests/smoke_nucleo_u385/: CMakeLists.txt  benchmark_inline.py  benchmark_probestream.py  verify_probestream.py
tests/smoke_nucleo_u385/Core/Src/: main.c  main_stress.c  stm32u3xx_it.c
tests/smoke_nucleo_u385/build_stress/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
tests/smoke_nucleo_u385/build_stress/cmake/stm32cubemx/: cmake_install.cmake
tests/smoke_nucleo_u385/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
tools/data_logger/: probestream_logger.py
tools/tui/: .gitignore  README.md  package.json  tsconfig.json
tools/tui/scripts/: build-dist.sh  build-dist.ts  dev.sh  install-deps.ps1  install-deps.py  install-deps.sh  sidecar.cmd  sidecar.sh
tools/tui/sidecar/: openocd_tcl.py  probestream_reader.py  pstui_sidecar.py  test_probestream_reader.py
tools/tui/src/: clipboard.ts  graphing.test.ts  graphing.ts  index.tsx  keyboard.ts  settings.test.ts  settings.ts  settingsStorage.ts  splash_logo.txt  temp.txt  theme.ts
tools/tui/src/bridge/: client.ts  supervisor.ts  types.ts
tools/tui/src/components/: AppFrame.tsx  ConfirmModal.tsx  HelpModal.tsx  ListRow.tsx  MetricStrip.tsx  PageHelpModal.tsx  PageSwitcher.tsx  Panel.tsx  PromptBar.tsx  QuickStartModal.tsx  StatusPill.tsx
tools/tui/src/decoders/: decoders.test.ts  index.ts
tools/tui/src/pages/: LogPage.tsx  ProbesPage.tsx  SettingsPage.tsx  SplashPage.tsx  StreamPage.tsx
